Fix overflow of initials in avatars

--- a/src/components/_avatar.scss
+++ b/src/components/_avatar.scss
@@ -18,6 +18,7 @@ $eve-avatar-sizes: (
 
     &[data-initial] {
         background: $eve-color-primary;
+        overflow: hidden;
 
         &::before {
             content: attr(data-initial);
